fix: code rabbit complaints, fixed some routes
